--- a/task 8/Dockerfile
+++ b/task 8/Dockerfile
@@ -1,35 +1,15 @@
-# Build stage
-FROM maven:3.8.5-openjdk-17-slim AS build
+# Use an official OpenJDK runtime as a parent image
+FROM openjdk:17-jdk-alpine
 
-# Set the working directory
+# Set the working directory in the container
 WORKDIR /app
 
-# Copy the pom.xml and maven wrapper files
-COPY pom.xml ./
-COPY mvnw ./
-COPY .mvn .mvn
+# Copy the current directory contents into the container at /app
+COPY . /app
 
-# Download the dependencies
-RUN ./mvnw dependency:go-offline
+# Package the application
+RUN ./mvnw package
 
-# Copy the application source code
-COPY src ./src
-
-# Build the application
-RUN ./mvnw package -DskipTests
-
-# Run stage
-FROM eclipse-temurin:17-jre
-
-# Set the working directory
-WORKDIR /app
-
-# Copy the built JAR from the build stage
-COPY --from=build /app/target/*.jar /app/app.jar
-
-# Expose the port the application runs on
+# Make port 8080 available to the world outside this container
 EXPOSE 8080
-
-# Define the entry point for the container
-CMD ["java", "-jar", "/app/app.jar"]
-
+CMD ["/bin/sh", "-c", "java -jar /app/target/*.jar"]
