--- a/kubernetes-tasks2/deployments/app-deployment.yml
+++ b/kubernetes-tasks2/deployments/app-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: spring-petclinic
-        image: mostafaamansour/spring-petclinic-mysql
+        image: mohamedkasem22/springpetclinic:latest
         ports:
         - containerPort: 8080
         env:
